// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`KanbanPage Task Operations should match snapshot with modal open 1`] = `
<div>
  <div
    data-testid="window-header"
  >
    <img
      alt="Kanban"
      data-testid="window-icon"
      src="/images/kanban.webp"
    />
    <span
      data-testid="window-title"
    >
      Kanban
    </span>
    <button
      data-testid="btn-close"
    >
      Close
    </button>
    <button
      data-testid="btn-maximize"
    >
      Maximize
    </button>
    <button
      data-testid="btn-minimize"
    >
      Minimize
    </button>
  </div>
  <div
    class="w-full h-full flex flex-col bg-[#EBEDF0] overflow-hidden"
  >
    <div
      class="flex mt-[10px] ml-[10px] mr-[10px] h-[42px] gap-[10px]"
    >
      <div
        class="flex flex-1 items-center pl-[12px] text-base font-medium text-[#475466] tracking-normal leading-[42px] border border-[#DADEE0] bg-[#ffffff] truncate"
      >
        <button
          data-testid="add-btn"
        >
          +
        </button>
        New
      </div>
      <div
        class="flex flex-1 items-center pl-[12px] text-base font-medium text-[#475466] tracking-normal leading-[42px] border border-[#DADEE0] bg-[#ffffff] truncate"
      >
        Work
      </div>
      <div
        class="flex flex-1 items-center pl-[12px] text-base font-medium text-[#475466] tracking-normal leading-[42px] border border-[#DADEE0] bg-[#ffffff] truncate"
      >
        Test
      </div>
      <div
        class="flex flex-1 items-center pl-[12px] text-base font-medium text-[#475466] tracking-normal leading-[42px] border border-[#DADEE0] bg-[#ffffff] truncate"
      >
        Done
      </div>
    </div>
    <div
      class="flex-1 overflow-x-hidden relative top-0"
    >
      <div
        data-testid="grid-layout"
      >
        <div
          class="bg-white border-l-3 border-l-primary flex flex-col cursor-pointer item-drag-handle"
        >
          <div
            data-testid="card-1"
          >
            Task 1
          </div>
        </div>
        <div
          class="bg-white border-l-3 border-l-primary flex flex-col cursor-pointer item-drag-handle"
        >
          <div
            data-testid="card-2"
          >
            Task 2
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="modal"
    >
      <div
        class="mt-4 space-y-4"
      >
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
          >
            Title
          </label>
          <textarea
            class="w-full border border-[#DADEE0] rounded-[2px] px-2 py-1 text-sm text-[#475466] h-[70px] focus:outline-none focus:border-primary"
          >
            Task 1
          </textarea>
        </div>
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
          >
            Tags
          </label>
          <input
            data-testid="tags-input"
            value="webix"
          />
        </div>
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
          >
            Status
          </label>
          <select
            data-testid="status-select"
          >
            <option
              value="New"
            >
              New
            </option>
            <option
              value="Work"
            >
              Work
            </option>
          </select>
        </div>
        <div
          class="flex justify-between"
        >
          <button
            data-testid="btn-success"
          >
            Remove
          </button>
          <button
            data-testid="btn-success"
          >
            Save
          </button>
        </div>
      </div>
      <button
        data-testid="modal-close"
      >
        Close
      </button>
    </div>
  </div>
</div>
`;

exports[`KanbanPage should match snapshot with modal open 1`] = `
<div>
  <div
    class="w-full h-full flex flex-col bg-[#EBEDF0] overflow-hidden"
  >
    <div
      class="flex mt-[10px] ml-[10px] mr-[10px] h-[42px] gap-[10px]"
    >
      <div
        class="flex flex-1 items-center pl-[12px] text-base font-medium text-[#475466] tracking-normal leading-[42px] border border-[#DADEE0] bg-[#ffffff] truncate"
      >
        <button
          data-testid="add-btn"
        >
          +
        </button>
        New
      </div>
      <div
        class="flex flex-1 items-center pl-[12px] text-base font-medium text-[#475466] tracking-normal leading-[42px] border border-[#DADEE0] bg-[#ffffff] truncate"
      >
        Work
      </div>
      <div
        class="flex flex-1 items-center pl-[12px] text-base font-medium text-[#475466] tracking-normal leading-[42px] border border-[#DADEE0] bg-[#ffffff] truncate"
      >
        Test
      </div>
      <div
        class="flex flex-1 items-center pl-[12px] text-base font-medium text-[#475466] tracking-normal leading-[42px] border border-[#DADEE0] bg-[#ffffff] truncate"
      >
        Done
      </div>
    </div>
    <div
      class="flex-1 overflow-x-hidden relative top-0"
    >
      <div
        data-testid="grid-layout"
      >
        <div
          class="bg-white border-l-3 border-l-primary flex flex-col cursor-pointer item-drag-handle"
        >
          <div
            data-testid="card-1"
          >
            Task 1
          </div>
        </div>
        <div
          class="bg-white border-l-3 border-l-primary flex flex-col cursor-pointer item-drag-handle"
        >
          <div
            data-testid="card-2"
          >
            Task 2
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="modal"
    >
      <div
        class="mt-4 space-y-4"
      >
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
          >
            Title
          </label>
          <textarea
            class="w-full border border-[#DADEE0] rounded-[2px] px-2 py-1 text-sm text-[#475466] h-[70px] focus:outline-none focus:border-primary"
          >
            Task 1
          </textarea>
        </div>
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
          >
            Tags
          </label>
          <input
            data-testid="tags-input"
            value="webix"
          />
        </div>
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
          >
            Status
          </label>
          <select
            data-testid="status-select"
          >
            <option
              value="New"
            >
              New
            </option>
            <option
              value="Work"
            >
              Work
            </option>
          </select>
        </div>
        <div
          class="flex justify-between"
        >
          <button
            data-testid="btn-success"
            role="button"
          >
            Remove
          </button>
          <button
            data-testid="btn-success"
            role="button"
          >
            Save
          </button>
        </div>
      </div>
      <button
        data-testid="modal-close"
      >
        Close
      </button>
    </div>
  </div>
</div>
`;
